teft-align fixed

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -738,7 +738,7 @@ section h3.section-subheading {
 }
 
 .contactwmclass {
-    text-align: justify;
+    text-align: start;
     font-size: 1.4em;
 }
 
